# animoji

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build-and-deploy.yml  ci-lint.yml  deps-scan.yml  security.yml
ai-worker/: .dockerignore  Dockerfile  main.py  pyproject.toml
ai-worker/core/: __init__.py  flux_client.py  logger.py  minio_client.py  nats_client.py  prompt_agent.py  settings.py
ai-worker/models/: __init__.py  image_generation.py  job.py
ai-worker/prompts/: __init__.py  anime_generation.py  base.py  emoji_generation.py  emotion_cues.py
ai-worker/routers/: __init__.py  health.py
ai-worker/services/: __init__.py  consumer.py  emoji_consumer.py  image_consumer.py  image_processor.py
ai-worker/utils/: __init__.py  image_utils.py
ansible/: playbook.yml  requirements.yml  vars.yml  vault.example.yml
ansible/templates/: env.j2
docs/: 00-project-overview.md  IMAGE_LOADING_STRATEGY.md  IMPLEMENTATION_GUIDE.md
frontend/: .dockerignore  .env.example  .prettierignore  Dockerfile  components.json  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/assets/: 8-bit Cat.lottie  loading-house.json
frontend/src/hooks/: index.ts  redux.ts  useSSE.ts
frontend/src/pages/: AuthCallbackPage.tsx  AuthPage.tsx  CommunityPage.tsx  CreatePage.tsx  EmojiPage.tsx  (+5 more)
gateway/: .dockerignore  .gitignore  .golangci.yml  Dockerfile  README.md  go.mod  go.sum
nginx/: default.conf  prod-vm.conf
(+204 files in other folders)
